--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,35 +1,2 @@
 spring.application.name=backend
-
-springdoc.paths-to-match=/api/**
-springdoc.swagger-ui.operations-sorter=alpha
-
-spring.mail.host=smtp.163.com
-spring.mail.username=${MAIL_USERNAME_163}
-spring.mail.password=${MAIL_PWD_163}
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.database=0
-
-spring.rabbitmq.addresses=localhost
-spring.rabbitmq.port=5432
-spring.rabbitmq.username=root
-spring.rabbitmq.password=root
-spring.rabbitmq.virtual-host=/
-
-minio.url=http://localhost:9000
-minio.username=mcdd1024
-minio.password=mcdd1024@pwd
-
-mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis-plus.global-config.db-config.logic-delete-field=enable
-mybatis-plus.global-config.db-config.logic-not-delete-value=1
-mybatis-plus.global-config.db-config.logic-delete-value=0
-
-#logging.level.com.zaxxer.hikari=debug
+spring.profiles.active=dev
